--- a/Changes
+++ b/Changes
@@ -1,6 +1,7 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+        - update prereq to perl 5.14.0 for new enough Unicode
 
 0.002     2015-10-16 10:46:55-04:00 America/New_York
         - there's a new method, ->load_emoji, to reload the emoji mapping
