--- a/Changes
+++ b/Changes
@@ -1,6 +1,7 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+        - updates for Unicode 15 and perl v5.38
 
 0.009     2022-12-31 16:51:33-05:00 America/New_York
         - update author contact info
